--- a/references.bib
+++ b/references.bib
@@ -441,3 +441,14 @@
   year={2006},
   organization={Springer}
 }
+
+@article{cover1967nearest,
+  title={Nearest neighbor pattern classification},
+  author={Cover, Thomas and Hart, Peter},
+  journal={IEEE transactions on information theory},
+  volume={13},
+  number={1},
+  pages={21--27},
+  year={1967},
+  publisher={IEEE}
+}
