Chapt 4 KNN missing data

--- a/_titlepage.tex
+++ b/_titlepage.tex
@@ -55,5 +55,10 @@
 	A distributed system is one where the failure of some \\
 	computer I've never heard of can keep me from getting my work done. \\
 	\textit{-- Leslie Lamport}
+	% Possible cites:
+	% “We should be careful to get out of an experience
+	% only the wisdom that is in it-and stop there; lest we be like the cat that sits
+	% down on a hot stove-lid. She will never sit down on a hot stove-lid againand that is well; but also she will never sit down on a cold one any more.”
+	% (From Following the Equator, 1897.)
 \end{titlepage}
 
