--- a/references.bib
+++ b/references.bib
@@ -452,3 +452,24 @@
   year={1967},
   publisher={IEEE}
 }
+
+@article{ieee754,
+  author={},
+  journal={IEEE Std 754-2019 (Revision of IEEE 754-2008)}, 
+  title={IEEE Standard for Floating-Point Arithmetic}, 
+  year={2019},
+  volume={},
+  number={},
+  pages={1-84},
+  doi={10.1109/IEEESTD.2019.8766229}}
+
+  @article{altman1992introduction,
+  title={An introduction to kernel and nearest-neighbor nonparametric regression},
+  author={Altman, Naomi S},
+  journal={The American Statistician},
+  volume={46},
+  number={3},
+  pages={175--185},
+  year={1992},
+  publisher={Taylor \& Francis}
+}
