--- a/chapter9.tex
+++ b/chapter9.tex
@@ -4,6 +4,8 @@
 
 \section{Summary}
 
+- discuss low amount of parameters and curse of dimensionality\\
+
 TODO: Rewrite once Evaluation done\\
 \\
 
