--- a/references.bib
+++ b/references.bib
@@ -473,3 +473,25 @@
   year={1992},
   publisher={Taylor \& Francis}
 }
+
+@article{warren2016birmingham,
+  title={The Birmingham Urban Climate Laboratory—A high density, urban meteorological dataset, from 2012--2014},
+  author={Warren, Elliott L and Young, Duick T and Chapman, Lee and Muller, Catherine and Grimmond, CSB and Cai, Xiao-Ming},
+  journal={Scientific data},
+  volume={3},
+  number={1},
+  pages={1--8},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
+@article{koskinen2011helsinki,
+  title={The Helsinki Testbed: a mesoscale measurement, research, and service platform},
+  author={Koskinen, Jarkko T and Poutiainen, Jani and Schultz, David M and Joffre, Sylvain and Koistinen, Jarmo and Saltikoff, Elena and Gregow, Erik and Turtiainen, Heikki and Dabberdt, Walter F and Damski, Juhani and others},
+  journal={Bulletin of the American Meteorological Society},
+  volume={92},
+  number={3},
+  pages={325--342},
+  year={2011},
+  publisher={American Meteorological Society}
+}
